# filmmash-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.py
alembic/: README.md  env.py
alembic/versions/: aeca945a00f8_initial_schema.py
app/: dependencies.py  main.py
app/api/: api_router.py
app/api/v1/: __init__.py  v1_router.py
app/core/: README.md  __init__.py  background_tasks.py  config.py  decorators.py  dependencies.py  exceptions.py  init_routers.py  logger.py  middleware.py  response.py  schemas.py  security.py
app/core/http/: device.py  schemas.py
app/core/metrics/: __init__.py  decorators.py  global_metrics.py  metrics_background_tasks.py  metrics_middleware.py  metrics_router.py  prometheus.py
app/db/: README.md  __init__.py  exceptions.py
app/db/mongo/: db.py  dependencies.py
app/db/postgres/: dependencies.py  engine.py  init_db.py
app/domains/auth/: README.md  __init__.py  dependencies.py  entities.py  enums.py  exceptions.py  models.py  schemas.py  types.py
app/domains/auth/repositories/: permission_repository.py  role_repository.py  session_repository.py  user_repository.py
app/domains/auth/routers/: auth_router.py  permission_router.py  role_router.py  user_router.py
app/domains/auth/schemas/: __init__.py  api_schemas.py  permission_schemas.py  role_schemas.py  session_schemas.py  user_schemas.py
app/domains/auth/services/: auth_service.py  permission_service.py  role_service.py  session_service.py  user_service.py
app/domains/health/: routers.py
app/domains/live_chat/: __init__.py  chat_manager.py  entities.py  exceptions.py  routers.py
app/domains/live_chat/repositories/: __init__.py  conversation_repository.py
app/domains/live_chat/services/: conversation_service.py
app/schemas/: __init__.py  response.py  responses.py
app/seed/: run_seed.py  seed.py
docs/: alembic_workflow_guide.md  testing_guide.md
scripts/: setup_test_db.py  test_auth.py
tests/: conftest.py  test_routes.py
tests/app/: test_routes.py
tests/app/e2e/: conftest.py
tests/app/e2e/domains/auth/: test_auth_routes.py  test_permission_routes.py  test_role_routes.py  test_user_routes.py
tests/app/integration/: test_permission_repository.py  test_role_repository.py
tests/app/integration/domains/auth/: test_permission_repository.py  test_role_repository.py  test_session_repository.py  test_user_repository.py
tests/app/unit/: test_roles_repository.py  test_user_repository.py
